# SubStream-Protocol-Contracts

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DISASTER_RECOVERY.md  INTEGRATION_GUIDE.md  INVARIANTS.md  PROTOCOL_FEE_ACCESS_CONTROL.md  PROTOCOL_FEE_IMPLEMENTATION.md  PROTOCOL_FEE_IMPLEMENTATION_COMPLETE.md  README.md  REPLAY_ATTACK_PREVENTION_IMPLEMENTATION.md  SECURITY.md  WASM_COMPRESSION.md  WEBHOOKS.md
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  ci.yml  formal-verification.yml  soroban.yml  test.yml  wasm-compression.yml
contracts/substream_contracts/: Cargo.toml  Makefile
contracts/substream_contracts/fuzz/: Cargo.toml
contracts/substream_contracts/fuzz/fuzz_targets/: batch_import_signatures.rs  billing_cycle_epoch_crossing.rs  cancel_velocity_breaker.rs  micro_subscription_execution.rs
contracts/substream_contracts/scripts/: compress_wasm.sh
contracts/substream_contracts/src/: billing_dispute.rs  lib.rs  lib_updated.rs  test.rs  test_allowance_health.rs  (+32 more)
docs/: CREATOR_TUTORIAL.md  GOVERNANCE.md
frontend-utils/: README.md  SubscribeButtonWithFees.tsx  feeEstimator.ts
scripts/: .env.example  README.md  check_doc_comments.sh  compress_wasm.sh  requirements.txt  revenue_claim_cron_job.py  revenue_claim_cron_job.rs  soroban_revenue_claimer.py  start_local_dev.sh  test_basic_functionality.py  test_revenue_claimer.py
simulator/: Cargo.toml
simulator/src/: main.rs
subgraph/: docker-compose.yml  package.json  schema.graphql  subgraph.yaml
subgraph/src/: mapping.ts
tools/pull-tester/: Cargo.toml  README.md
(+7 files in other folders)
