[package]
name = "substream_contracts-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "25", features = ["testutils"] }
ed25519-dalek = "2"
stellar-strkey = "0.0.16"

[dependencies.substream_contracts]
path = ".."

[[bin]]
name = "withdrawal_consistency"
path = "fuzz_targets/withdrawal_consistency.rs"
test = false
doc = false
bench = false

[[bin]]
name = "batch_import_signatures"
path = "fuzz_targets/batch_import_signatures.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cancel_velocity_breaker"
path = "fuzz_targets/cancel_velocity_breaker.rs"
test = false
doc = false
bench = false

[[bin]]
name = "micro_subscription_execution"
path = "fuzz_targets/micro_subscription_execution.rs"
test = false
doc = false
bench = false
